--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
+									<a href=>
+										<img src=>
+										<h3>
 									
 									</a>
 								</div>
