--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Maps that Matter. All rights reserved. Design: Nicholas Perdue | Department of Geography | Humboldt State University </p>
+						<p>Geospatial Portfolio. All rights reserved. Design: Christine Emerson | Humboldt State University </p>
 					</footer>
 
 			</div>
