--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Geospatial Portfolio</title>
+		<title>Maps that Matter</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,11 @@
 						<h1><strong>Christine Emerson</strong>
 						<p>Cartography Portfolio</h1>
 						<ul class="icons">
-							<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-							<li><a href="mailto:che27@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/dikembe3000" class="icon style2 fa-github"><span class="label">500px</span></a></li>
+							<li><a href="mailto:nicholas.perdue@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
@@ -28,10 +31,37 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href=>
-										<img src=>
-										<h3>
-									
+									<a href="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true" alt="" />
+										<h3>Illinois</h3>
+									</a>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true" alt="" />
+										<h3>Colorado</h3>
+									</a>
+								</div>
+								<div>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true" alt="" />
+										<h3>Chile</h3>
+									</a>
+									<a href="images/Coastline_map.png">
+										<img src="images/Coastline_map.png" alt="" />
+										<h3>Louisiana Coastline</h3>
+									</a>
+									<a href="images/Portland_map.png">
+										<img src="images/Portland_map.png" alt="" />
+										<h3>Portland Landscape</h3>
+									</a>
+								</div>
+								<div>
+									<a href="images/Transit_map.png">
+										<img src="images/Transit_map.png" alt="" />
+										<h3>Humboldt Transit System</h3>
+									</a>
+									<a href="images/US_map.png">
+										<img src="images/US_map.png" alt="" />
+										<h3>Physical Map of United States</h3>
 									</a>
 								</div>
 							</section>
@@ -40,7 +70,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Geospatial Portfolio. All rights reserved. Design: Christine Emerson | Humboldt State University </p>
+						<p>Christine Emerson | Geospatial and Environmental Science Student | Humboldt State University </p>
 					</footer>
 
 			</div>
