--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 										<img src="https://github.com/christine-emerson/cartography/blob/master/images/Minnesota.png?raw=true" alt="" />
 										<h3>Minnesota</h3>
 									</a>
+								<div>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true" alt="" />
+										<h3>Illinois</h3>
+									</a>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true" alt="" />
+										<h3>Colorado</h3>
+									</a>
 								</div>
 							</section>
 
