--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true">
-										<img src="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true" alt="" />
-										<h3>Illinois</h3>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/pennsylvania_bear_harvest.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/pennsylvania_bear_harvest.png?raw=true" alt="" />
+										<h3>Pennsylvania Bear Harvest</h3>
 									</a>
-									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
-										<img src="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true" alt="" />
-										<h3>Colorado</h3>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/lab_10_vs1-1.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/lab_10_vs1-1.png?raw=true" alt="" />
+										<h3>US Hospital Size</h3>
 									</a>
 								</div>
 								<div>
