--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 										<img src="https://github.com/christine-emerson/cartography/blob/master/images/Minnesota.png?raw=true" alt="" />
 										<h3>Minnesota</h3>
 									</a>
+								</div>
 								<div>
 									<a href="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true">
 										<img src="https://github.com/christine-emerson/cartography/blob/master/Illinois.png?raw=true" alt="" />
