--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/Profile.jpg" alt="" /></span>
+						<span class="avatar"><img src="images/BRM2899-Stanley-Maps-Are-Weapons-1942_lowres.jpg" alt="" /></span>
 						<h1><strong>Christine Emerson</strong>
 						<p>Cartography Portfolio</h1>
 						<ul class="icons">
