--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 									</a>
 								</div>
 								<div>
-									<a href="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true">
-										<img src="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true" alt="" />
-										<h3>Chile</h3>
-									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
-										<img src="https://github.com/christine-emerson/cartography/blob/master/images/Minnesota.png?raw=true" alt="" />
-										<h3>Minnesota</h3>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/Switzerland-1.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/Switzerland-1.png?raw=true" alt="" />
+										<h3>Switzerland</h3>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/Lab8_finalmap.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/images/Lab8_finalmap.png?raw=true" alt="" />
+										<h3>Fire Analysis</h3>
 									</a>
 								</div>
 								<div>
@@ -57,6 +57,15 @@
 									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
 										<img src="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true" alt="" />
 										<h3>Colorado</h3>
+									</a>
+								</div>
+								<div>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/chile.png?raw=true" alt="" />
+										<h3>Chile</h3>
+									<a href="https://github.com/christine-emerson/cartography/blob/master/colorado.png?raw=true">
+										<img src="https://github.com/christine-emerson/cartography/blob/master/images/Minnesota.png?raw=true" alt="" />
+										<h3>Minnesota</h3>
 									</a>
 								</div>
 							</section>
