--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 							<section class="thumbnails">
 								<div>
 									<iframe width="100%" height="800px" src="https://christineemerson.maps.arcgis.com/apps/MapJournal/index.html?appid=120d00b4713749e6bf5d7c1a21540673" frameborder="0" scrolling="no"></iframe>
+									</a>
+								</div>
 									<a href="https://github.com/christine-emerson/cartography/blob/master/pennsylvania_bear_harvest.png?raw=true">
 										<img src="https://github.com/christine-emerson/cartography/blob/master/pennsylvania_bear_harvest.png?raw=true" alt="" />
 										<h3>Pennsylvania Bear Harvest</h3>
