--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<iframe width="100%" height="800px" src="https://christineemerson.maps.arcgis.com/apps/MapJournal/index.html?appid=120d00b4713749e6bf5d7c1a21540673" frameborder="0" scrolling="no"></iframe>
+									<iframe width="100%" height="800px" src="https://christineemerson.maps.arcgis.com/apps/MapJournal/index.html?appid=120d00b4713749e6bf5d7c1a21540673"></iframe>
 									<h3>Story Map</h3>
 									</a>
 								</div>
